# adaptive_stock_analysis_framework

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: framework-map.md
docs/plans/: 2026-03-16-adaptive-stock-analysis-framework-design.md  2026-03-16-adaptive-stock-analysis-framework.md  (+13 more)
examples/: prompts.md  routing-examples.md
inflection_discovery/: __init__.py  cli.py  config.py  contract.py  edgar.py  requirements.txt  symbols.py
install/: install-claude.sh  install-codex.sh  install.sh
reports/: ab_compare.html  akshare-integration.md  ashare_curves.html  backtest.html  backtest_results.json  backtest_results_A.json  backtest_results_A_top20.json  backtest_results_v2.json  comparison-report.md  dashboard.html  holdout_results.json  holdout_universe.json  llm_holdout_scores.json  llm_scores.json  make_ab_compare.py  make_ashare_curves.py  make_dashboard.py  make_price_curves.py  make_report_html.py  price_curves.html  run_holdout.py  sample_holdout.py
scripts/: morning_check.py  notify_gate.py  outcome_score.py  sync_portfolio.py  validate_records.py  validate_repo.py
tests/: test_ashare.py  test_canary.py  test_contract.py  test_decision_records.py  test_discovering_inflections_contract.py  test_earnings_inflection.py  test_install.sh  test_live_akshare.py  test_llm_backtest.py  test_morning_check.py  test_notify_gate.py  test_outcome_score.py  test_pit_fundamentals.py  test_report_quality.py  test_scorecard.py  test_skill_contracts.py  test_suite_wiring.py  test_sync_portfolio.py  test_validate_repo.py
(+107 files in other folders)
